Fix all menu overlaping issues and the content sizing when the sidebar is present

--- a/src/core/styles/components.css
+++ b/src/core/styles/components.css
@@ -1,10 +1,10 @@
 @layer components {
   /* NOTE: Para marcación de páginas */
   .page-main {
-    @apply bg-[#f5f5f5] w-full p-4 *:max-w-6xl flex flex-col gap-4 items-center h-min;
+    @apply bg-[#f5f5f5] w-full p-4 *:max-w-6xl flex flex-col gap-4 items-center;
 
     & > header {
-      @apply p-6 pb-0 w-full flex justify-between;
+      @apply p-6 pb-0 w-full flex justify-between items-baseline;
 
       & > h3 {
         @apply text-primary;
